feature: 施設の詳細情報を追加
